--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <!--Герой-->
         <section class="hero">
             <h1 class="hero-title">
-                <div class="hero-text">Эффективные решения для вашего бизнеса</div>
+                <span class="hero-text">Эффективные решения для вашего бизнеса</span>
             </h1>
             <button type="button" class="primary-button">Заказать услугу</button>
         </section>
@@ -48,19 +48,41 @@
             <div class="container">
             <h2 class="section-title hidden-title">Особенности организации</h2>
             <ul class="features-list">
-                <li class="item icon-antenna">
+                <li class="item">
+                    <div class="image-style">
+                        <svg class="icon-margin icon-size">
+                            <use href="./images/sprite.svg#icon-antenna"></use>
+                        </svg>
+                    </div>
                     <h3 class="title">ВНИМАНИЯ К ДЕТАЛЯМ</h3>
                     <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                   
                 </li>
-                <li class="item icon-clock">
+                <li class="item">
+                    <div class="image-style">
+                        <svg class="icon-margin icon-size">
+                            <use href="./images/sprite.svg#icon-clock"></use>
+                        </svg>
+                    </div>
                     <h3 class="title">ПУНКТУАЛЬНОСТЬ</h3>
                     <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                   
                 </li>
                 <li class="item icon-diagram">
+                    <div class="image-style">
+                        <svg class="icon-margin icon-size">
+                            <use href="./images/sprite.svg#icon-diagram"></use>
+                        </svg>
+                    </div>
                     <h3 class="title">ПЛАНИРОВАНИЕ</h3>
                     <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
                 <li class="item icon-astronaut">
+                    <div class="image-style">
+                        <svg class="icon-margin icon-size">
+                            <use href="./images/sprite.svg#icon-astronaut"></use>
+                        </svg>
+                    </div>
                     <h3 class="title">СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
                     <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
@@ -110,6 +132,24 @@
             </ul>
             </div>
         </section>
+
+
+        <!-- Клиенты -->
+
+        <section class="section">
+            <div class="container">
+                <h2 class="section-title">Постоянные клиенты</h2>
+                <ul>
+                    <li><a href=""></a></li>
+                    <li><a href=""></a></li>
+                    <li><a href=""></a></li>
+                    <li><a href=""></a></li>
+                    <li><a href=""></a></li>
+                    <li><a href=""></a></li>
+                </ul>
+            </div>
+        </section>
+
     </main>
     <!--Футер-->
     <footer class="footer-background">
