--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <svg class="icon-envelope" width="16" height="12">
                         <use href="./images/sprite.svg#icon-envelope"></use>
                     </svg>
-                    info@devstudio.com
+                    <span>info@devstudio.com</span>
                 </a>
             </li>
             <li class="item">
@@ -42,7 +42,7 @@
                     <svg class="icon-smartphone" width="10" height="16">
                         <use href="./images/sprite.svg#icon-smartphone"></use>
                     </svg>
-                    +38 096 111 11 11
+                    <span>+38 096 111 11 11</span>
                 </a>
             </li>
         </ul>
