--- a/portfolio.html
+++ b/portfolio.html
@@ -211,28 +211,28 @@
                 <ul class="social-list">
                     <li class="social-item-footer">
                         <a href="" class="social-link-footer">
-                            <svg class="size-team">
+                            <svg height="20" width="20">
                                 <use href="./images/sprite.svg#icon-instagram"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="social-item-footer">
                         <a href="" class="social-link-footer">
-                            <svg class="size-team">
+                            <svg height="20" width="20">
                                 <use href="./images/sprite.svg#icon-twitter"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="social-item-footer">
                         <a href="" class="social-link-footer">
-                            <svg class="size-team">
+                            <svg height="20" width="20">
                                 <use href="./images/sprite.svg#icon-facebook"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="social-item-footer">
                         <a href="" class="social-link-footer">
-                            <svg class="size-team">
+                            <svg height="20" width="20">
                                 <use href="./images/sprite.svg#icon-linkedin"></use>
                             </svg>
                         </a>
