--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <ul class="features-list">
                 <li class="item">
                     <div class="image-style">
-                        <svg class="icon-size">
+                        <svg height="70" width="70">
                             <use href="./images/sprite.svg#icon-antenna"></use>
                         </svg>
                     </div>
@@ -74,7 +74,7 @@
                 </li>
                 <li class="item">
                     <div class="image-style">
-                        <svg class="icon-size">
+                        <svg height="70" width="70">
                             <use href="./images/sprite.svg#icon-clock"></use>
                         </svg>
                     </div>
@@ -84,7 +84,7 @@
                 </li>
                 <li class="item">
                     <div class="image-style">
-                        <svg class="icon-size">
+                        <svg height="70" width="70">
                             <use href="./images/sprite.svg#icon-diagram"></use>
                         </svg>
                     </div>
@@ -93,7 +93,7 @@
                 </li>
                 <li class="item">
                     <div class="image-style">
-                        <svg class="icon-size">
+                        <svg height="70" width="70">
                             <use href="./images/sprite.svg#icon-astronaut"></use>
                         </svg>
                     </div>
@@ -126,28 +126,28 @@
                     <ul class="social-list">
                         <li class="social-item">
                             <a href="" class="social-link">
-                            <svg class="size-team">
+                            <svg height="20" width="20" >
                                 <use href="./images/sprite.svg#icon-instagram"></use>
                             </svg>
                             </a>
                         </li>
                         <li class="social-item">
                             <a href="" class="social-link">
-                                <svg class="size-team">
+                                <svg height="20" width="20">
                                     <use href="./images/sprite.svg#icon-twitter"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="social-item">
                             <a href="" class="social-link">
-                                <svg class="size-team">
+                                <svg height="20" width="20">
                                     <use href="./images/sprite.svg#icon-facebook"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="social-item">
                             <a href="" class="social-link">
-                                <svg class="size-team">
+                                <svg height="20" width="20">
                                     <use href="./images/sprite.svg#icon-linkedin"></use>
                                 </svg>
                             </a>
@@ -162,28 +162,28 @@
                     <ul class="social-list">
                         <li class="social-item">
                             <a href="" class="social-link">
-                                <svg class="size-team">
+                                <svg height="20" width="20">
                                     <use href="./images/sprite.svg#icon-instagram"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="social-item">
                             <a href="" class="social-link">
-                                <svg class="size-team">
+                                <svg height="20" width="20">
                                     <use href="./images/sprite.svg#icon-twitter"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="social-item">
                             <a href="" class="social-link">
-                                <svg class="size-team">
+                                <svg height="20" width="20">
                                     <use href="./images/sprite.svg#icon-facebook"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="social-item">
                             <a href="" class="social-link">
-                                <svg class="size-team">
+                                <svg height="20" width="20">
                                     <use href="./images/sprite.svg#icon-linkedin"></use>
                                 </svg>
                             </a>
@@ -198,28 +198,28 @@
                     <ul class="social-list">
                         <li class="social-item">
                             <a href="" class="social-link">
-                                <svg class="size-team">
+                                <svg height="20" width="20">
                                     <use href="./images/sprite.svg#icon-instagram"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="social-item">
                             <a href="" class="social-link">
-                                <svg class="size-team">
+                                <svg height="20" width="20">
                                     <use href="./images/sprite.svg#icon-twitter"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="social-item">
                             <a href="" class="social-link">
-                                <svg class="size-team">
+                                <svg height="20" width="20">
                                     <use href="./images/sprite.svg#icon-facebook"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="social-item">
                             <a href="" class="social-link">
-                                <svg class="size-team">
+                                <svg height="20" width="20">
                                     <use href="./images/sprite.svg#icon-linkedin"></use>
                                 </svg>
                             </a>
@@ -234,28 +234,28 @@
                     <ul class="social-list">
                         <li class="social-item">
                             <a href="" class="social-link">
-                                <svg class="size-team">
+                                <svg height="20" width="20">
                                     <use href="./images/sprite.svg#icon-instagram"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="social-item">
                             <a href="" class="social-link">
-                                <svg class="size-team">
+                                <svg height="20" width="20">
                                     <use href="./images/sprite.svg#icon-twitter"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="social-item">
                             <a href="" class="social-link">
-                                <svg class="size-team">
+                                <svg height="20" width="20">
                                     <use href="./images/sprite.svg#icon-facebook"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="social-item">
                             <a href="" class="social-link">
-                                <svg class="size-team">
+                                <svg height="20" width="20">
                                     <use href="./images/sprite.svg#icon-linkedin"></use>
                                 </svg>
                             </a>
@@ -276,42 +276,42 @@
                 <ul class="client-list">
                     <li class="client-item">
                         <a href="#" class="link-client">
-                        <svg class="client-icon">
+                        <svg height="60" width="106">
                             <use href="./images/sprite.svg#icon-client1"></use>
                         </svg>
                     </a>
                     </li>
                     <li class="client-item">
                         <a href="#" class="link-client">
-                            <svg class="client-icon">
+                            <svg height="60" width="106">
                                 <use href="./images/sprite.svg#icon-client2"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="client-item">
                         <a href="#" class="link-client">
-                            <svg class="client-icon">
+                            <svg height="60" width="106">
                                 <use href="./images/sprite.svg#icon-client3"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="client-item">
                         <a href="#" class="link-client">
-                            <svg class="client-icon">
+                            <svg height="60" width="106">
                                 <use href="./images/sprite.svg#icon-client4"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="client-item">
                         <a href="#" class="link-client">
-                            <svg class="client-icon">
+                            <svg height="60" width="106">
                                 <use href="./images/sprite.svg#icon-client5"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="client-item">
                         <a href="#" class="link-client">
-                        <svg class="client-icon">
+                        <svg height="60" width="106">
                             <use href="./images/sprite.svg#icon-client6"></use>
                         </svg>
                     </a>
@@ -339,28 +339,28 @@
             <ul class="social-list">
                 <li class="social-item-footer">
                     <a href="" class="social-link-footer">
-                        <svg class="size-team">
+                        <svg height="20" width="20">
                             <use href="./images/sprite.svg#icon-instagram"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="social-item-footer">
                     <a href="" class="social-link-footer">
-                        <svg class="size-team">
+                        <svg height="20" width="20">
                             <use href="./images/sprite.svg#icon-twitter"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="social-item-footer">
                     <a href="" class="social-link-footer">
-                        <svg class="size-team">
+                        <svg height="20" width="20">
                             <use href="./images/sprite.svg#icon-facebook"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="social-item-footer">
                     <a href="" class="social-link-footer">
-                        <svg class="size-team">
+                        <svg height="20" width="20">
                             <use href="./images/sprite.svg#icon-linkedin"></use>
                         </svg>
                     </a>
