--- a/index.html
+++ b/index.html
@@ -327,15 +327,15 @@
         <div>
         <a href=" / " class="logo link"> <span class="first-part-logo">Web</span><span class="logo-white">Studio</span></a>  
         <address>
-        <ul class="footer-nav removed-italics mail-footer">
-            <li class="footer-list"><a href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"  class="link logo-white ">г. Киев, пр-т Леси Украинки, 26</a></li>
-            <li class="footer-list"><a href="mailto:info@example.com" class="footer-contacts link">info@example.com</a></li>
-            <li class="footer-list"><a href="tel:+380991111111" class="footer-contacts footer-phone link">+38 099 111 11 11</a></li>
+        <ul class="footer-list removed-italics mail-footer">
+            <li class="footer-item"><a href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"  class="link logo-white ">г. Киев, пр-т Леси Украинки, 26</a></li>
+            <li class="footer-item"><a href="mailto:info@example.com" class="footer-contacts link">info@example.com</a></li>
+            <li class="footer-item"><a href="tel:+380991111111" class="footer-contacts footer-phone link">+38 099 111 11 11</a></li>
         </ul>
         </address>
         </div>
         <div class="social-footer">
-            <h3 class="footer-h removed-italics">ПРИСОЕДИНЯЙТЕСЬ</h3>
+            <h3 class="footer-tittle removed-italics">ПРИСОЕДИНЯЙТЕСЬ</h3>
             <ul class="social-list">
                 <li class="social-item-footer">
                     <a href="" class="social-link-footer">
